--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.7.7",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.3",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
@@ -29,6 +30,7 @@
   "dependencies": {
     "@material-ui/core": "^4.8.3",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   }
 }
