--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@material-ui/icons": "^4.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-promise-tracker": "^2.0.6",
     "react-router-dom": "^5.1.2"
   }
 }
